2008-01-21  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-ignore-errors): New macro.
	(dbus-unregister-object): New defun.  Moved from dbusbind.c.
	(dbus-handle-event, dbus-list-activatable-names, dbus-list-names)
	(dbus-list-queued-owners, dbus-get-name-owner, dbus-introspect)
	(dbus-get-signatures): Apply `dbus-ignore-errors'.

2008-01-21  Martin Rudalics  <rudalics@gmx.at>

	* outline.el (outline-up-heading): Fix check for top level to
	avoid infinite looping in hide-other.

2008-01-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* vc.el (vc-process-sentinel): After calling the previous
	sentinel, do nothing if the process' buffer is not live.

2008-01-21  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: Fix a problem of cleaning blank faces when turning off
	blank-mode in some buffers (like *info* buffers).  Reported by Juanma
	Barranquero <lekktu@gmail.com>.  Eliminate `-face' suffix of all
	blank-mode faces.  Doc fix.  New version 8.1.
	(blank-turn-on, blank-turn-off): Replace (and CONDITION BODY) by (when
	CONDITION BODY).
	(blank-space-face): Face/option name replaced by blank-space.
	(blank-hspace-face): Face/option name replaced by blank-hspace.
	(blank-tab-face): Face/option name replaced by blank-tab.
	(blank-newline-face): Face/option name replaced by blank-newline.
	(blank-trailing-face): Face/option name replaced by blank-trailing.
	(blank-line-face): Face/option name replaced by blank-line.
	(blank-space-before-tab-face): Face/option name replaced by
	blank-space-before-tab.
	(blank-color-on, blank-color-off, blank-display-char-on): Fix code.

2008-01-21  Juanma Barranquero  <lekktu@gmail.com>

	* blank-mode.el (blank-style, blank-chars, blank-hspace-regexp)
	(blank-space-regexp, blank-tab-regexp, blank-trailing-regexp)
	(blank-space-before-tab-regexp, blank-global-modes, blank-mode)
	(global-blank-mode): Doc fixes.
	(blank, blank-space-face, blank-hspace-face, blank-tab-face)